Corrected the alignment in offline dh tab

--- a/static/css/offlinedbconfigform.css
+++ b/static/css/offlinedbconfigform.css
@@ -30,27 +30,18 @@ label{
     margin-right:10px
 }
 
-.long-label {
-    min-width: 20px;
-    max-width: 100px;
-    white-space: normal;
-    word-wrap: break-word;
-}
-
-.long-labels {
-    width: 100px;
-    white-space: normal;
-    word-wrap: break-word;
-}
-
-.label_input{
+.label_input {
     display: flex;
-    width: 350px;
-    margin-left:-10px
+    width: 460px; /* Increase width to align both sections properly */
     margin-bottom: 10px;
     margin-top: 12px;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+}
+
+.label_input label {
+    width: 250px; /* Set a fixed width for labels */
+    text-align: left; /* Ensure left alignment */
 }
 
 input[type='radio']:checked {
@@ -98,14 +89,7 @@ input[type='radio']:checked {
 
 }
 
-.radio_input_br input{
-
-}
-.radio_input_br_inside{
-    margin-bottom:15px
-}
-
-.radio_input_br_inside,.radio_input_inside{
+.radio_input_br_inside {
     display: flex;
     flex-direction: row;
     justify-content: left;
@@ -119,4 +103,8 @@ input[type='radio']:checked {
 .radio_input_br_inside label{
     font-size: 14px;
     width: 20%;
+}
+
+#saveofflinedata_label {
+    margin-left: 20px; /* Adjust the value as needed */
 }
